ColorRamp Keyframes crash Blender #85870
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#85870
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.89
Blender Version
Broken: version: In any version the feature is integrated in. e.g. since version 2.90
Worked: None
Short description of error
Creating a keyframe of ColorRamp's position value crashes blender.
Exact steps for others to reproduce the error
This works in any file, with every mesh and every material. Example: Bug Report.blend
Added subscriber: @FalseHeaven
#102212 was marked as duplicate of this issue
#101687 was marked as duplicate of this issue
#86057 was marked as duplicate of this issue
#97546 was marked as duplicate of this issue
#91340 was marked as duplicate of this issue
Added subscriber: @CharlieJolly
Confirmed. I believe keyframing POS shouldn't be allowed as the data structure for the items is not ordered to allow this. However, here is the call stack from Windows debug build if it helps. Seems that there is no check for NULL property in the rna_property_update function.
Added subscriber: @lichtwerk
Changed status from 'Needs Triage' to: 'Confirmed'
Can confirm.
Think keyframing is supported?
It works correctly when hitting {key I} over the
Pos
button -- it does so both in the Node Editor as well as the Node representation in the Properties Editor.Looks like a problem with
template_node_view
just for the animation decoratorWill check in a bit.
Added subscriber: @JulianEisel
Looked into this a bit, but it turns out to be a bit hairy:
First things first, it turns out that (when using the animation decorator), the defined callback
colorband_update_cb
is never called.The reason for this is still simple: we are defining it on the wrong button :)
We are getting the last button from the uiBlock (
block->buttons.last
), but this is then the decorator, not thePosition
button.Usually (for most of the other buttons) this is not so much of a problem, but the colorband callback
colorband_update_cb
manipulates the button data (because of the sorting of colorband elements -- if you drag element 0 past element one, it automatically becomes 1)When done from the Properties Editor (when the wrong button is in play) this automatic index update is already not working for said reasons.
Crash then happens because the buttons rnapoin & rnaprop are garbled -- we should not mess with the uiButDecorator's data it seems (havent checked in depth though).
What I tried:
ColorRampElement
does not have a reference to its ColorRamp, so we cant do the sorting then):this doesnt rely on manipulating the button data, gets rid of the crash, but like I said, we are loosing the ability to sort the index (which is needed)
P1983: T85870_snippet
This gets rid of the crash, works in both Properties Editor and Node Editor [albeit the position slider is now a bit jumpy for some reason -- looses the connection to the drag sometimes?]
This might also have to be ifdef behind
UI_PROP_DECORATE
, but before spending more time, I would like to summon @JulianEisel to check if there is a better way to do this...Until then, I will step down to not block others looking at this.
Added subscribers: @Raytirat, @Siddarth-Calidas, @EAW
It may be safer here to manually place the decorator button after getting the button via
block->buttons.last
, instead of lettinguiItemR()
do it. This can be done easily withuiItemDecoratorR()
after disabling automatic decorators withuiLayoutSetPropDecorate()
Would be nice to have this included in corrective releases at least.
Added subscriber: @dr.sybren
Keyframing POS?
Update: ah, keyframing the "Pos" property. POS also is an abbreviation for 💩 ;-)
Added subscriber: @maylog
Added subscriber: @jinglepp
Removed subscriber: @jinglepp
Added subscribers: @Dobro, @HooglyBoogly, @Vyach, @Didier-Merette-Dufresne, @TheStegosaurus, @PratikPB2123, @WTF1TC, @filedescriptor
So will raise prio here as well
ColorRamp Keyframes crash Blender.to ColorRamp Keyframes crash BlenderAdded subscriber: @dougcal
Added subscribers: @Jake-B, @Oxicid
Added subscriber: @meta_raketa
This issue was referenced by
0e1877b754
This issue was referenced by
19a13a8b8b
This issue was referenced by
82ba205646
Changed status from 'Confirmed' to: 'Resolved'
Thanks @lichtwerk, your investigation was quite useful and saved me the time to investigate things myself. Code shouldn't assume
uiItemR()
only adds a single button, even regardless of decorators this can go wrong. So my fix entirely removes that assumption.thx for the fix!